# ragflow-simple-ui-client

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/rules/: code-conventions.md  general.md
.agent/workflows/: doc-converter.md  init.md
docs/: CONVERTER_GUIDE.md
src/: main.py
src/ragflow_client/: __init__.py  __main__.py
src/ragflow_client/cli/: __init__.py  commands.py  ui.py
src/ragflow_client/core/: __init__.py  daemon.py  lifecycle.py
src/ragflow_client/features/: __init__.py
src/ragflow_client/features/doc_converter/: __init__.py  processor.py  worker.py
src/ragflow_client/features/doc_converter/config/: __init__.py  converter_config.py
src/ragflow_client/features/doc_converter/core/: __init__.py  output_manager.py  prerequisite.py
src/ragflow_client/features/doc_converter/engine/: __init__.py  base.py  factory.py
src/ragflow_client/services/: __init__.py  file_manager.py  socket_service.py
src/ragflow_client/utils/: __init__.py  config.py  logger.py
src/simple_ui_client/: __init__.py  __main__.py
src/simple_ui_client/cli/: __init__.py  commands.py  ui.py
src/simple_ui_client/core/: __init__.py  bus.py  daemon.py  lifecycle.py
src/simple_ui_client/features/: __init__.py
src/simple_ui_client/features/doc_converter/: __init__.py
src/simple_ui_client/services/: __init__.py  file_manager.py  socket_service.py
src/simple_ui_client/utils/: __init__.py  config.py  logger.py
tests/: conftest.py
tests/core/: test_bus.py
tests/features/doc_converter/config/: test_converter_config.py
tests/features/doc_converter/core/: test_output_manager.py
tests/features/doc_converter/engine/: test_base.py  test_factory.py
tests/features/doc_converter/schema/: test_schema.py
tests/features/doc_converter/worker/: test_worker.py
(+47 files in other folders)
